src/components/Header.module.css
.headerContainer {
    width: 100svw;
    padding: 8px var(--root-page-padding) 0 var(--root-page-padding);
    position: sticky;
    top: 0;
    z-index: 1000;
    background: var(--root-background-gradient);
    transition: none;
}

.header {
    --header-background-gradient: linear-gradient(to right, #305166 10%, #3b7094 90%) fixed;
    --header-background-gradient-translucent: linear-gradient(to right, #30516640 10%, #3b709440 90%) fixed;
    --header-padding: 20px;

    font-family: var(--bellota-text-font-family);
    background: var(--header-background-gradient);
    color: #ffffff;
    font-weight: lighter;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    text-overflow: ellipsis;
    line-height: 1;
    justify-content: space-between;
    align-items: center;
    border-radius: 12px;
    padding: var(--header-padding);
    user-select: none;
    position: relative;
    box-shadow: 0px 0px 5px #00000088;

    @media screen and (max-width:450px) {
        --header-padding: 15px;
    }
}

.headerTitle {
    font-size: 15pt;
    max-width: 380px;
    white-space: nowrap;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.headerPagePath {
    .slash {
        margin-inline: 5px;
    }

    @media screen and (max-width:450px) {
        opacity: 0;
        pointer-events: none;
        width: 0;
    }
}

.headerCatalogue {
    font-size: 12pt;
    font-family: var(--montserrat-alternates-font-family);

    .headerCatalogueSeparator {
        margin: 5px;
        opacity: 50%;

        &:last-child {
            display: none;
        }
    }

    @media screen and (max-width:1100px) {
        display: none;
    }
}

.headerHamburgerMenu {
    --icon-size: 24pt;

    display: flex;
    position: absolute;
    right: 0;

    .hamburgerButton {
        all: unset;
        display: flex;
        cursor: pointer;
        margin-right: var(--header-padding);

        .hamburgerMenuIcon {
            font-size: var(--icon-size);
        }
    }


    .hamburgerMenuDropdown {
        position: absolute;
        top: calc(var(--icon-size) + var(--header-padding));
        right: 0;
        width: max-content;
        font-family: var(--montserrat-alternates-font-family);
        background: var(--header-background-gradient-translucent);
        backdrop-filter: blur(24px) brightness(50%);
        border-radius: 6px;
        z-index: 1001;
        box-shadow: 0px 0px 20px #00000088;
        font-size: 14pt;
        overflow: hidden;
        max-height: max-content;

        &.hamburgerMenuDropdownHidden {
            max-height: 0;
        }

        .hamburgerMenuDropdownContent {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: 10px;
            padding: 20px 30px;
        }
    }


    @media screen and (min-width:1101px) {
        display: none;
    }
}

.headerCatalogueUnselected {
    max-width: 240px;
    opacity: 60%;
}

.headerCatalogueSelected {
    font-weight: 900;
    max-width: 240px;
}

